fixed formatting on mobile and PC

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     position: relative;
     background-color: white;
     float: left;
-    width: 204px;
+    width: 200px;
     height: 525px;
     margin-right: 15px;
     box-shadow: 3px 3px 10px rgba(0,0,0,0.5);
@@ -92,7 +92,8 @@ body {
 }
 #weaponList{
     display: block;
-    margin-left:20%;
+    margin-left:25%;
+    width:76%;
 }
 #separator{
     width:60%;
